[package]
name = "canon_collision_website"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Kent <rubickent@gmail.com>"]

[dependencies]
dirs = "2"
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "02b79e28f71ccbd1fce0e369469c92caedb38cd8" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", rev = "02b79e28f71ccbd1fce0e369469c92caedb38cd8", features = ["handlebars_templates"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
git2 = { version = "0.10", features = ["vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
