[package]
name = "canon_collision_website"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Kent <rubickent@gmail.com>"]

[dependencies]
dirs-next = "2"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features = ["handlebars_templates"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
git2 = { version = "0.13", features = ["vendored-openssl"] }
chrono = { version = "0.4", features = ["serde"] }
